--- a/client/tests/index.html
+++ b/client/tests/index.html
@@ -3,8 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link type="text/css" src="/build/jasmine.css" />
+
+    <script type="text/javascript" src="/build/jasmine.js" > </script>
+    <script type="text/javascript" src="/build/jasmine-html.js" > </script>
+
+    <script type="text/javascript" src="/build/tests.js" > </script>
 </head>
 <body>
-!!!!!!!!!!!!!!!!
+Jasmine tests
 </body>
 </html>
